# wasm-parse

./: Cargo.toml
src/: lib.rs  main.rs  wasm.rs
src/parse/: binary.rs  mod.rs
src/parse/binary/: global.rs  indices.rs  instr.rs  mod.rs  module.rs  name.rs  preamble.rs  section.rs  sections.rs  types.rs  values.rs  vector.rs
src/parse/binary/section/: custom.rs  functype.rs  global.rs  import.rs  mem.rs  table.rs  types.rs
src/parse/binary/sections/: code.rs  custom.rs  data.rs  elem.rs  export.rs  func.rs  global.rs  import.rs  mem.rs  start.rs  table.rs  types.rs
src/wasm/: data.rs  elem.rs  export.rs  expr.rs  func.rs  global.rs  import.rs  indices.rs  instr.rs  mem.rs  mod.rs  module.rs  start.rs  table.rs  types.rs  values.rs
wasm-examples/: foo.wasm  hello.wasm
