[package]
name = "wasm-parse"
version = "0.1.0"
authors = ["Adam Snaider <adsnaider@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nano-leb128 = {version = "0.1.0", default-features = false}
thiserror = "1.0"
